[gd_scene load_steps=43 format=3 uid="uid://mdife12fatax"]

[ext_resource type="Script" uid="uid://506wsaee0mv5" path="res://Scenes/Games/Runner/Player/Character.gd" id="1_bxigd"]
[ext_resource type="Texture2D" uid="uid://d1nfegpgvyn2y" path="res://Scenes/Games/Runner/Player/Assets/chucha_dead.png" id="2_ax4f8"]
[ext_resource type="Texture2D" uid="uid://0iiyank7py5n" path="res://Scenes/Games/Runner/Player/Assets/chucha_salto.png" id="2_v83f1"]
[ext_resource type="Texture2D" uid="uid://bddkvfdvqyluh" path="res://Scenes/Games/Runner/Player/Assets/chucha_run.png" id="3_p8h5u"]
[ext_resource type="Texture2D" uid="uid://bu0isxu0r11pq" path="res://Scenes/Games/Runner/Player/Assets/chucha_speen.png" id="4_rmdl1"]
[ext_resource type="Script" uid="uid://dipoiq30ybi4m" path="res://Scenes/Games/Runner/Nodes/hurtbox.gd" id="6_867kb"]
[ext_resource type="Texture2D" uid="uid://b4lcbvarki4ec" path="res://Scenes/Games/Runner/2d_lights_and_shadows_neutral_point_light.png" id="6_dgtf6"]
[ext_resource type="Script" uid="uid://bhrgeve3nwlrj" path="res://Scenes/Games/Runner/Nodes/hitbox.gd" id="6_no8lk"]
[ext_resource type="AudioStream" uid="uid://bg2vtxka5sk8l" path="res://Scenes/Games/Runner/SFX/apple.mp3" id="9_2t5hh"]
[ext_resource type="AudioStream" uid="uid://bff6x1jgxkyy2" path="res://Scenes/Games/Runner/SFX/scream.mp3" id="10_15t7l"]
[ext_resource type="PackedScene" uid="uid://ulabpiees70b" path="res://Scenes/Games/Runner/Nodes/Trail2D.tscn" id="11_7n43c"]
[ext_resource type="Texture2D" uid="uid://tgrhyc5nss4x" path="res://Scenes/Games/Runner/Player/Assets/trail.png" id="12_ocyf7"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_d72yt"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_icb05"]
atlas = ExtResource("3_p8h5u")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rnup"]
atlas = ExtResource("3_p8h5u")
region = Rect2(560, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu328"]
atlas = ExtResource("2_v83f1")
region = Rect2(336, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rari"]
atlas = ExtResource("2_v83f1")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh5l6"]
atlas = ExtResource("2_v83f1")
region = Rect2(560, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6hl1"]
atlas = ExtResource("2_v83f1")
region = Rect2(672, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5tou"]
atlas = ExtResource("2_v83f1")
region = Rect2(784, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r8gd"]
atlas = ExtResource("2_v83f1")
region = Rect2(896, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qo1p"]
atlas = ExtResource("2_v83f1")
region = Rect2(1008, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1wmr"]
atlas = ExtResource("2_v83f1")
region = Rect2(1120, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d06b5"]
atlas = ExtResource("3_p8h5u")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_na8nj"]
atlas = ExtResource("3_p8h5u")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7guim"]
atlas = ExtResource("3_p8h5u")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqgh4"]
atlas = ExtResource("3_p8h5u")
region = Rect2(336, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2ivr"]
atlas = ExtResource("3_p8h5u")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_myx4f"]
atlas = ExtResource("3_p8h5u")
region = Rect2(560, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjhq"]
atlas = ExtResource("4_rmdl1")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2wok"]
atlas = ExtResource("4_rmdl1")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_213o1"]
atlas = ExtResource("4_rmdl1")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_messw"]
atlas = ExtResource("4_rmdl1")
region = Rect2(336, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j4fv"]
atlas = ExtResource("4_rmdl1")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2bdh"]
atlas = ExtResource("4_rmdl1")
region = Rect2(560, 0, 112, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_qaxsj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ax4f8")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icb05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rnup")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu328")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rari")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh5l6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6hl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5tou")
}],
"loop": false,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r8gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qo1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1wmr")
}],
"loop": false,
"name": &"landing",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d06b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_na8nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7guim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqgh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2ivr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myx4f")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2wok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_213o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_messw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j4fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2bdh")
}],
"loop": true,
"name": &"spin",
"speed": 20.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1h05l"]
blend_mode = 1
light_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0w7t"]
size = Vector2(12, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_50b31"]
radius = 19.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsa8q"]
size = Vector2(43, 22)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_771om"]
light_mode = 1

[sub_resource type="Gradient" id="Gradient_whj7m"]
offsets = PackedFloat32Array(0, 0.318584, 0.884956, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="Chucha" type="CharacterBody2D" groups=["player"]]
collision_mask = 3
script = ExtResource("1_bxigd")
speed = 300

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
material = SubResource("CanvasItemMaterial_d72yt")
sprite_frames = SubResource("SpriteFrames_qaxsj")
animation = &"idle"
frame_progress = 0.56579
offset = Vector2(-16, -36)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.203922)
show_behind_parent = true
z_index = 2
material = SubResource("CanvasItemMaterial_1h05l")
texture = ExtResource("6_dgtf6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7.15256e-07, 6)
rotation = 1.5708
shape = SubResource("RectangleShape2D_l0w7t")

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 14
script = ExtResource("6_no8lk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_50b31")
debug_color = Color(0.47451, 0.831373, 0.164706, 0.419608)

[node name="hurtbox" type="Area2D" parent="."]
collision_mask = 4
script = ExtResource("6_867kb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_vsa8q")
debug_color = Color(0.701961, 0, 0, 0.419608)

[node name="BerrySFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_2t5hh")
volume_db = 15.0
max_polyphony = 10

[node name="ScreamSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_15t7l")

[node name="CollectibleComboDecay" type="Timer" parent="."]

[node name="VisibilityNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 60.5)
scale = Vector2(3.5, 8.45)

[node name="Trail2D" parent="." instance=ExtResource("11_7n43c")]
show_behind_parent = true
z_index = 1
material = SubResource("CanvasItemMaterial_771om")
position = Vector2(0, -19)
width = 25.0
width_curve = null
default_color = Color(1, 1, 1, 0.784314)
gradient = SubResource("Gradient_whj7m")
texture = ExtResource("12_ocyf7")
texture_mode = 2
lenght = 15

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="timeout" from="CollectibleComboDecay" to="." method="_on_collectible_combo_decay_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_visibility_notifier_screen_exited"]
